# rucipes

./: .env  Cargo.toml  TODO
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-09-20-181212_create_ingredient_recipe_table/: down.sql  up.sql
migrations/2020-09-20-183349_automatic_updated_at/: down.sql  up.sql
migrations/2020-11-08-191226_create_recipe_step_table/: down.sql  up.sql
migrations/2020-11-08-204213_add_column_recipe_step_number/: down.sql  up.sql
migrations/2020-11-15-183715_add_table_constraints/: down.sql  up.sql
migrations/2020-11-15-184645_more_timestamp_triggers/: down.sql  up.sql
migrations/2020-11-15-185337_add_image_table/: down.sql  up.sql
src/: database.rs  images.rs  ingredients.rs  main.rs  models.rs  recipes.rs  schema.rs  steps.rs
