[package]
name = "rucipes"
version = "0.1.0"
authors = ["sophy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
scraper = "0.12.0"
diesel = { version = "1.4.4", features = ["postgres","chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.10", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4"] } 
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
